# UncleMike

./: .gitignore  Cargo.toml  Justfile  PLAN.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.electron.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/: 0001_uncle_mike_baseline.sql
backend/src/: audit.rs  lib.rs  main.rs  workspace.rs
backend/src/auth/: biometric.rs  jwt.rs  middleware.rs  mod.rs  password.rs  pin.rs  session.rs
backend/src/db/: cipher.rs  mod.rs  models.rs
backend/src/db/repositories/: clients.rs  matters.rs  mod.rs
backend/src/embeddings/: chunker.rs  mod.rs  service.rs
backend/src/llm/: builtin_tools.rs  claude.rs  gemini.rs  local.rs  mod.rs  summarize.rs  types.rs
backend/src/mcp/: mod.rs
backend/src/mikeprj/: crypto.rs  io.rs  manifest.rs  mod.rs
backend/src/pdf/: docx_writer.rs  mod.rs
backend/src/routes/: chat.rs  clients.rs  documents.rs  internal.rs  matters.rs  mod.rs  projects.rs  sync.rs  system.rs  tabular_reviews.rs  user.rs  workflows.rs
backend/src/secrets/: mod.rs
backend/src/sidecars/: docling.rs  mod.rs  supervisor.rs
backend/src/storage/: mod.rs
backend/src/sync/: mod.rs  scanner.rs
backend/tests/: binding.rs  onnx_inference.rs  sqlcipher_smoke.rs  workflows_smoke.rs
docs/: 00-anti-patterns.md  01-workspace-layout.md  02-item-frontmatter.md  03-sidecars.md  04-versioning.md  05-edges.md  06-mikeprj.md  07-rebuilds.md  08-security-model.md  09-performance.md  decisions.md
electron/: auth.ts  backend.ts  docling.ts  frontend.ts  jwt.ts  keys.ts  logging.ts  main.ts  paths.ts  preload.js  safeEnv.ts  secrets.ts  workspace.ts
electron/lock/: lock.css  lock.html  lock.js
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: error.tsx  layout.tsx  not-found.tsx
frontend/src/app/(pages)/: layout.tsx
frontend/src/app/(pages)/account/: layout.tsx  page.tsx
frontend/src/app/(pages)/account/mcp/: page.tsx
frontend/src/app/(pages)/account/models/: page.tsx
frontend/src/app/(pages)/account/sync/: page.tsx
frontend/src/app/(pages)/projects/[id]/assistant/chat/[chatId]/: page.tsx
frontend/src/app/(pages)/tabular-reviews/: page.tsx
frontend/src/app/components/assistant/: AddDocButton.tsx  AssistantMessage.tsx  AssistantSidePanel.tsx  AssistantWorkflowModal.tsx  ChatInput.tsx  ChatView.tsx  EditCard.tsx  InitialView.tsx  ModelToggle.tsx  SelectAssistantProjectModal.tsx
frontend/src/app/components/modals/: credits-exhausted-modal.tsx  delete-chats-modal.tsx
frontend/src/app/components/projects/: NewProjectModal.tsx  ProjectExplorer.tsx  ProjectPage.tsx  ProjectsOverview.tsx
frontend/src/app/components/shared/: AddDocumentsModal.tsx  AddProjectDocsModal.tsx  ApiKeyMissingModal.tsx  AppSidebar.tsx  DocPanel.tsx  DocView.tsx  DocxView.tsx  FileDirectory.tsx  OwnerOnlyModal.tsx  PeopleModal.tsx  ProjectPicker.tsx  UploadNewVersionModal.tsx  types.ts
frontend/src/app/components/tabular/: AddColumnModal.tsx  AddNewTRModal.tsx  TRChatPanel.tsx  TREditColumnMenu.tsx  TRSidePanel.tsx  TRTable.tsx  TabularCell.tsx  TabularReviewView.tsx
frontend/src/app/components/workflows/: DisplayWorkflowModal.tsx  NewWorkflowModal.tsx  ShareWorkflowModal.tsx  WFEditColumnModal.tsx  WorkflowList.tsx  WorkflowPromptEditor.tsx
frontend/src/app/hooks/: useAssistantChat.ts  useCapabilities.ts  useDocumentVersions.ts  useFetchDocxBytes.ts  useFetchSingleDoc.ts  useSelectedModel.ts
frontend/src/app/lib/: mikeApi.ts  modelAvailability.ts
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: site-logo.tsx
frontend/src/contexts/: AuthContext.tsx  UserProfileContext.tsx
frontend/src/lib/: supabase.ts
python/docling_sidecar/: app.py  requirements.txt
scripts/: copy-electron-assets.js  electron-boot-check.js  fetch-libreoffice.js  lint-db-isolation.sh  packaged-backend-smoke.js  stage-backend.js  stage-frontend.js
src/corpora/: eurlex.rs
src/routes/: chat.rs  eurlex.rs  user.rs
